2011-09-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (host): Correct help link.

	* src/html/help.xsl (assets.html): Add actions and asset details.

2011-09-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report_omp): Add filters to GET_ASSET.

	* src/html/omp.xsl: Add stylesheet attribs for functions.
	(gsa:build-levels): New function.
	(host, report [assets]): Add filters to links.

2011-09-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_lsc_credentials): Init sort params.

	* src/html/gsad.xsl (html-gsa-navigation): Clean up some wrapping.

2011-09-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Add report scrolling to Asset Details page.

	* src/gsad.c (init_validator): Add pos.
	(get_report_omp): Send host and pos to Manager.  Remove search_phrase
	hack.

	* src/gsad_omp.c (get_report_omp): If host is given send host as
	search_phrase and wrap in get_asset.

	* src/html/omp.xsl (host, report [assets]): Add report scrolling.

2011-09-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Add Asset Details page.

	* src/gsad_omp.c (get_report_omp): If host is given send host as
	search_phrase and wrap in get_asset.

	* src/html/omp.xsl (host, get_reports_response [asset], get_asset): New
	template.
	(report [assets]): Add Actions column.

2011-09-03  Matthew Mundell <matthew.mundell@greenbone.net>

	Remove old param mechanism.

	* src/gsad.c (init_validator): Add login command and caller rule.
	(free_gchar_array, struct req_parms, append_chunk_string)
	(append_chunk_binary): Remove.
	(struct gsad_connection_info): Add cookie.  Was in struct req_parms.
	(free_resources): Remove req_parms, add cookie.
	(serve_post): Remove old param inits.
	(ELSE, ELSE_OAP): Get cmd from new params.
	(exec_omp_post): Get all params from new mechanism.
	(exec_omp_get): Remove old param inits.  Get package_format from new
	params.